Added many interactions with NPC

--- a/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PPG Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -263,7 +263,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.CameraSwitch,InputSettings.Bindings.ActionMappings.ChangeTypeOfProjectile,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Interaction,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.Test,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.WheelUp,InputSettings.Bindings.AxisMappings.WheelDown,InputSettings.Bindings.AxisMappings.ZoomCamera,InputSettings.Bindings.AxisMappings.Go,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis
 SkeletalMeshComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BP_PlayerCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -271,7 +271,7 @@ K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Transf
 K2Node_InputKey=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
-CapsuleComponent=
+CapsuleComponent=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PropertyWrapper.DefaultValueCategory.itemData
 LandscapeStreamingProxy=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,Landscape.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,PropertyWrapper.DefaultValueCategory.itemData
 SceneComponent=
 K2Node_MacroInstance=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -305,7 +305,7 @@ Blueprint=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon
 BP_Chest_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
 PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Collision.Collision
-BP_Weapon_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
+BP_Weapon_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_BreakStruct=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 BPC_EquipmentSystem_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
 K2Node_FunctionEntry=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SpringArmComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Landscape.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.itemData
@@ -350,9 +350,9 @@ LastLevel=/Game/Level1
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 Object="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -530,7 +530,7 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" "
+DataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[3]\" "
 AssetViewerSettings="\"Object\" "
 Locomotion_BS_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -636,8 +636,8 @@ TextureRenderTarget2D="\"Object\" "
 TextureRenderTarget="\"Object\" "
 Texture="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Texture2D="\"Object\" "
 GeometryCollectionActor="\"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|General\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Destruction.GeometryCollectionComponent.Object.ChaosPhysics.ChaosPhysics|Events\" \"Object.Destruction.GeometryCollectionComponent.Object.Collision.BodyInstance\" "
@@ -655,7 +655,7 @@ BPC_EquipmentSystem_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BPS_Player_Stats_C="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Layout.Slot\" "
 WB_HUD_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -664,7 +664,7 @@ TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.Outlin
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" "
 Border="\"Object\" \"Object.Appearance.DesiredSizeScale\" \"Object.Layout.Slot\" "
-ContentWidget="\"Object\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" "
 WB_Equipable_Slot_C="\"Object\" \"Object.Layout.Slot\" "
@@ -681,8 +681,8 @@ WB_HotBar_C="\"Object\" "
 WB_GameOver_C="\"Object\" "
 BP_NPC_C="\"Object\" "
 PrimaryAssetLabel="\"Object\" "
-PrimaryDataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" "
-PDA_Dialog_C="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" "
+PrimaryDataAsset="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[3]\" "
+PDA_Dialog_C="\"Object\" \"Object.Default.Dialogs\" \"Object.Default.Dialogs.Dialogs[0]\" \"Object.Default.Dialogs.Dialogs[0].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[1]\" \"Object.Default.Dialogs.Dialogs[2]\" \"Object.Default.Dialogs.Dialogs[2].NextDialogOptions_17_37C896144B7BEA540A4F429FBCA71FC2\" \"Object.Default.Dialogs.Dialogs[3]\" "
 BP_DialogComponent_C="\"Object\" "
 WB_Dialog_C="\"Object\" "
 WB_DialogChoice_C="\"Object\" "
@@ -2628,10 +2628,12 @@ BPC_DialogComponent_C.Cooking=True
 BPC_DialogComponent_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/Blueprints/NPC/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Blueprints/Shop/BP_Shop.BP_Shop
+OpenAssetsAtExit=/Game/Blueprints/Shop/WB_BuyItem.WB_BuyItem
+OpenAssetsAtExit=/Game/Blueprints/NPC/BP_NPC_2.BP_NPC_2
+OpenAssetsAtExit=/Game/Blueprints/NPC/DA_Dialog2.DA_Dialog2
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2685,7 +2687,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/NPC
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2736,26 +2738,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/NPC/BP_NPC_2
-MRUItem1=/Game/Blueprints/Shop/BP_Shop
-MRUItem2=/Game/Blueprints/NPC/BP_NPC
-MRUItem3=/Game/Blueprints/BP_PlayerCharacter
-MRUItem4=/Game/Level1
-MRUItem5=/Game/UI/WB_NPCName
-MRUItem6=/Game/Blueprints/NPC/BP_NPC_3
-MRUItem7=/Game/Blueprints/BP_Target
-MRUItem8=/Game/Blueprints/NPC/DA_Dialog3
-MRUItem9=/Game/Blueprints/NPC/DA_DialogSimple
-MRUItem10=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
-MRUItem11=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
-MRUItem12=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
-MRUItem13=/Game/Blueprints/NPC/DA_Dialog2
-MRUItem14=/Game/Blueprints/NPC/ENPC_Role
-MRUItem15=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
-MRUItem16=/Game/UI/WB_NPCHelthBar
-MRUItem17=/Game/UI/WB_Name
-MRUItem18=/Game/Blueprints/BPC_Player_Stats
-MRUItem19=/Game/UI/WB_HUD
+MRUItem0=/Game/Blueprints/NPC/DA_Dialog2
+MRUItem1=/Game/Blueprints/Shop/WB_BuyItem
+MRUItem2=/Game/Blueprints/NPC/BP_NPC_2
+MRUItem3=/Game/Blueprints/Shop/BP_Shop
+MRUItem4=/Game/Blueprints/NPC/BP_NPC
+MRUItem5=/Game/Blueprints/BP_PlayerCharacter
+MRUItem6=/Game/Level1
+MRUItem7=/Game/UI/WB_NPCName
+MRUItem8=/Game/Blueprints/NPC/BP_NPC_3
+MRUItem9=/Game/Blueprints/BP_Target
+MRUItem10=/Game/Blueprints/NPC/DA_Dialog3
+MRUItem11=/Game/Blueprints/NPC/DA_DialogSimple
+MRUItem12=/Game/Blueprints/NPC/Dialog_System/WB_DialogChoice
+MRUItem13=/Game/Blueprints/NPC/Dialog_System/BP_DialogComponent
+MRUItem14=/Game/Blueprints/NPC/Dialog_System/WB_Dialog
+MRUItem15=/Game/Blueprints/NPC/ENPC_Role
+MRUItem16=/Game/Blueprints/NPC/Dialog_System/S_DialogEntry
+MRUItem17=/Game/UI/WB_NPCHelthBar
+MRUItem18=/Game/UI/WB_Name
+MRUItem19=/Game/Blueprints/BPC_Player_Stats
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
